# fri-11-20-task1-szumied

./: README.md  pyproject.toml  task.py  task_rework.py
