[tool.poetry]
name = "fri-11-20-task1-szumied"
version = "0.1.0"
description = ""
authors = ["Replit user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
pylint = "^2.7.2"
pycodestyle = "^2.7.0"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
